# ow-mobilenet-hybrid-actions

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.sh  build.sh  compare-runtime.sh  optimize-target.sh
benchmarks/: benchmark_local.sh  benchmark_wsk_concurrency.sh  benchmark_wsk_warm_cold.sh
benchmarks/inputs/: add.json  bus.json  cat1.json  cat2.json  cat3.json  dog.json  hen.json
benchmarks/results/bare-metal/: README.md  aot.txt  jit.txt
benchmarks/results/openwhisk/: RESULTS.md  RESULTS_PREWARMED.md  average_cold_start_vanilla .json  average_cold_start_vanilla_pull_disabled.json  average_cold_start_wasm.json  average_prewarmed_vanilla.json  average_prewarmed_wasm.json
benchmarks/tools/image_to_base64_json/: image_to_base64_json.sh
benchmarks/tools/result_analysis/: analyse_cold_start.py  input_vanilla_cold_start.json  input_vanilla_cold_start_pull_disabled.json  input_vanilla_prewarmed.json  input_wasm_cold_start.json  input_wasm_prewarmed.json
examples/: add-l.rs  input.json  mobilenet-oc-l.rs  mobilenet-oc.rs
ow-docker-runtime/: add-wrapper.rs  mobilenet-oc-l-ow-wrapper.rs  mobilenet-oc-l-ow-wrapper_.rs
tools/: image_to_base64_json.sh
